# test_django_api

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt  testdata.sql
bookstore/books/: admin.py  consumer.py  models.py  tests.py  urls.py  views.py
bookstore/books/api/v1/: routers.py  serializers.py  views.py
bookstore/books/migrations/: 0001_initial.py  0002_alter_book_publication_date_and_more.py
bookstore/books/templates/: base.html  home.html  ws_temp.html
bookstore/bookstore/: asgi.py  settings.py  urls.py
