[tool.poetry]
name = "bookstore"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.4"
djangorestframework = "^3.15.1"
channels = "^4.1.0"
python-dotenv = "^1.0.1"
daphne = "^4.1.2"
drf-yasg = "^1.21.7"
requests = "^2.31.0"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
